...
      const val PREVIEW = "camera_preview"
    }

    object Utils {
      // PLATE SWIPE SCAFFOLD
      const val SEARCH_BAR = "searchBar"
      const val TOP_BAR = "topBar"
      const val TOP_BAR_TITLE = "topBarTitle"
      const val BACK_ARROW_ICON = "backArrowIcon"
      const val EDIT_ACCOUNT_ICON = "editAccountIcon"
      const val PLATESWIPE_SCAFFOLD = "plateSwipeScaffold"
      const val CHEF_HAT_ICON = "chefHatIcon"
      const val BOTTOM_BAR = "bottomNavigationMenu"
      const val TEST_TAG = "TagTestTag"
    }

    object SwipePage {
      const val FILTER = "filter"
      const val FILTER_ROW = "filterRow"
...
      const val PREP_TIME_TEXT = "prepTimeText"
      const val COOK_TIME_TEXT = "cookTimeText"
      const val TOTAL_TIME_TEXT = "totalTimeText"
    }

    object RecipeList {
      const val RECIPE_LIST_TEST_TAG = "recipeList"
      const val RECIPE_CARD_TEST_TAG = "recipeCard"
      const val RECIPE_PRICE_RATING_TEST_TAG = "priceRating"
      const val RECIPE_CATEGORIES_TEST_TAG = "recipeCategories"
      const val RECIPE_IMAGE_TEST_TAG = "recipeImage"
      const val RECIPE_TITLE_TEST_TAG = "recipeTitle"
      const val RECIPE_FAVORITE_ICON_TEST_TAG = "recipeFavoriteIcon"
      const val RECIPE_DOWNLOAD_ICON_TEST_TAG = "recipeDownloadIcon"
      const val RECIPE_DELETE_ICON_TEST_TAG = "recipeDeleteIcon"
      const val CONFIRMATION_POP_UP = "confirmationPopUp"
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object SignInScreen {
      const val TACO = "taco"
      const val SUSHI = "sushi"
      const val AVOCADO = "avocado"
...
      const val PLATE_TEXT = "plateText"
      const val SWIPE_TEXT = "swipeText"
      const val LOGIN_BUTTON = "loginButton"
    }

    object AccountScreen {
      const val USERNAME_TEST_TAG = "userName"
      const val LIKED_RECIPES_BUTTON_TEST_TAG = "likedRecipesButton"
      const val CREATED_RECIPES_BUTTON_TEST_TAG = "createdRecipesButton"
      const val PROFILE_PICTURE_TEST_TAG = "profilePicture"
      const val RECIPE_EDIT_ICON_TEST_TAG = "recipeEditIcon"
    }

    object EditAccountScreen {
      const val SAVE_CHANGES_BUTTON_TAG = "saveChangesButton"
      const val PROFILE_PICTURE_TAG = "profilePicture"
      const val USERNAME_FIELD_TAG = "usernameTextField"
      const val EMAIL_FIELD_TAG = "emailTextField"
      const val CHANGE_PROFILE_PICTURE_BUTTON_TAG = "changeProfilePictureButton"
      const val DATE_OF_BIRTH_TEXT_FIELD_TAG = "dateOfBirthTextField"
      const val DATE_OF_BIRTH_CHANGE_BUTTON_TAG = "dateOfBirthChangeButton"
      const val DATE_PICKER_POP_UP_TAG = "datePickerPopUp"
      const val DATE_PICKER_POP_UP_CONFIRM_TAG = "confirmationButtonPopUp"
      const val DATE_PICKER_POP_UP_CANCEL_TAG = "dismissButtonPopUp"
    }

    object CreateRecipeListInstructionsScreen {
      const val SCREEN_COLUMN = "ScreenColumn"
      const val INSTRUCTION_TEXT_SPACE = "InstructionTextSpace"
      const val INSTRUCTION_TEXT_IN_CARD = "InstructionTextInCard"
...
